--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     <button id="download-vcard-btn">Download My vCard</button>
                 </div>
             </div>
-        </div>      
+        </div>
+        <script src="script.js"></script>
     </body>
 </html>
