Updated style.css and index.html files.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </div>
             </div>
         </div>
-        <div>
+        <div class="vcard-btn">
             <a id="download-vcf" href="EstanlerAleman.vcf" download="EstanlerAleman.vcf" style="display:none"></a>
             <button id="download-vcard-btn">Download My vCard</button>
         </div>
