Updated the download button.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="vcard-btn">
             <a id="download-vcf" href="EstanlerAleman.vcf" download="EstanlerAleman.vcf" style="display:none"></a>
-            <button id="download-vcard-btn" class="vcard">Download My vCard</button>
+            <button id="download-vcard-btn" class="vcard">Download vCard</button>
         </div>
         <script src="script.js"></script>
     </body>
