--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="contact-info">
                     <p><span class="bold">Phone:</span> +1 (646) 491-3959</p>
                     <p><span class="bold">Email:</span><a href="mailto:info@aviandrivingschool.com"> Info@aviandrivingschool.com</a></p>
-                    <p><span class="bold">Address:</span><a href="https://maps.app.goo.gl/PFxRtLpsvxKtQ2ua9"> 5 E Gun Hill Rd Bronx, NY 10467</a></p>
+                    <p><span class="bold">Address:</span><a href="https://maps.app.goo.gl/PFxRtLpsvxKtQ2ua9" rel="business address" target="_blank"> 5 E Gun Hill Rd Bronx, NY 10467</a></p>
                     <p><span class="bold">Website:</span><a href="https://www.aviandrivingschool.com/" rel="Avian Driving School Webisite" target="_blank"> www.AvianDrivingSchool.com</a></p>
                 </div>
             </div>
